# evals

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SKILL.md  STYLE_GUIDE.md  diff.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/labelers/: area.yml  type.yml
.github/workflows/: changelog-sync.yml  integration-test.yml  issue-labeler.yml  pr-and-push.yml  pr-title.yml  pypi-publish-on-release.yml  strands-command.yml  strands-ts-command.yml  test-lint.yml
ISSUE_TEMPLATE/: feature_request.yml
src/examples/: actor_simulator_basic.py  agents_as_tools.py  bank_tools_trajectory.py  custom_evaluator.py  evaluate_graph.py  evaluate_swarm.py  examples_from_files.py  faithfulness_evaluator.py  goal_success_rate_evaluator.py  goal_success_rate_evaluator_langfuse.py  harmfulness_evaluator.py  helpfulness_evaluator.py  helpfulness_evaluator_langfuse.py  helpfulness_evaluator_tool_use.py  judge_output.py  multi_metric_evaluator.py  multi_shots.py  output_evaluator.py  safety_judge_output.py  third_party_evaluator.py  tool_parameter_accuracy_evaluator.py  tool_selection_accuracy_evaluator.py  tools_trajectory.py  trajectory_evaluator.py
src/examples/dataset_generator/: simple_dataset.py  topic_planning_dataset.py  trajectory_dataset.py
src/examples/experiment_generator/: simple_dataset.py  topic_planning_dataset.py  trajectory_dataset.py
src/examples/langfuse_utils/: trace.json  utils.py
src/strands_evals/: __init__.py  __main__.py  _async.py  agent_task_adapter.py  case.py  dataset.py  eval_task_handler.py  experiment.py  local_file_task_result_store.py  task_result_store.py  utils.py
src/strands_evals/aggregation/: __init__.py  coerce.py  frame.py  mixin.py
src/strands_evals/aggregators/: __init__.py  base.py  types.py
src/strands_evals/chaos/: __init__.py  _context.py  aggregation_display.py  aggregator.py  aggregator_types.py  case.py  effects.py  experiment.py  model_effects.py  model_types.py  model_utils.py  plugin.py  scenario.py
src/strands_evals/cli/: __init__.py  __main__.py  _agent_task.py  _common.py  _entrypoint.py  _io.py  main.py
src/strands_evals/detectors/: __init__.py  chunking.py  constants.py  diagnosis.py  failure_detector.py  root_cause_analyzer.py  user_request_extractor.py  utils.py
src/strands_evals/display/: display_console.py
src/strands_evals/evaluators/: __init__.py  attack_success_evaluator.py  coherence_evaluator.py  conciseness_evaluator.py  contextual_faithfulness_evaluator.py  correctness_evaluator.py  environment_state_evaluator.py  evaluator.py  faithfulness_evaluator.py  goal_success_rate_evaluator.py  harmfulness_evaluator.py  helpfulness_evaluator.py  instruction_following_evaluator.py  interactions_evaluator.py  multimodal_correctness_evaluator.py  multimodal_faithfulness_evaluator.py  multimodal_instruction_following_evaluator.py  multimodal_output_evaluator.py  multimodal_overall_quality_evaluator.py  output_evaluator.py  red_team_judge_evaluator.py  refusal_evaluator.py  response_relevance_evaluator.py  stereotyping_evaluator.py  tool_parameter_accuracy_evaluator.py  tool_selection_accuracy_evaluator.py  trajectory_evaluator.py
src/strands_evals/extractors/: __init__.py  graph_extractor.py  swarm_extractor.py  tools_use_extractor.py  trace_extractor.py
src/strands_evals/generators/: __init__.py  dataset_generator.py  experiment_generator.py  topic_planner.py
src/strands_evals/mappers/: __init__.py  cloudwatch_parser.py  cloudwatch_session_mapper.py  constants.py  langchain_otel_session_mapper.py  langfuse_mapper.py  openinference_session_mapper.py  opensearch_session_mapper.py  session_mapper.py  strands_in_memory_session_mapper.py  utils.py
src/strands_evals/plugins/: __init__.py  evaluation_plugin.py
src/strands_evals/providers/: README.md  __init__.py  cloudwatch_provider.py  exceptions.py  langfuse_provider.py  opensearch_provider.py  trace_provider.py
src/strands_evals/redteam/: __init__.py  agent_adapter.py  presets.py  report.py  runner.py  types.py
src/strands_evals/simulation/: README.md  __init__.py  actor_simulator.py  tool_simulator.py
src/strands_evals/skills/: __init__.py  aggregation_display.py  aggregator.py  aggregator_types.py  experiment.py
src/strands_evals/telemetry/: __init__.py  _cloudwatch_logger.py  config.py  tracer.py
src/strands_evals/types/: __init__.py  detector.py  evaluation.py  evaluation_report.py  multimodal.py  trace.py
src/strands_evaluation/: dataset.py
src/strands_evaluation/evaluators/: evaluator.py  interactions_evaluator.py  output_evaluator.py  trajectory_evaluator.py
src/strands_evaluation/types/: evaluation_report.py
tests/: test_dataset.py  test_evaluator.py  test_integration.py  test_interactions_evaluator.py  test_output_evaluator.py  test_trajectory_evaluator.py
tests/aggregation/: test_coerce.py  test_frame.py  test_mixin.py
tests/aggregators/: test_base.py  test_types.py
tests/skills/: test_aggregator.py  test_experiment.py  test_types.py
tests/strands_evals/: cloudwatch_helpers.py  opensearch_helpers.py  test_agent_task_adapter.py  test_async.py  test_cases.py  test_dataset.py  test_eval_task.py  test_experiment.py  test_experiment_otel_conventions.py  test_local_file_task_result_store.py
tests/strands_evals/chaos/: test_case.py  test_context.py  test_effects.py  test_experiment.py  test_failure_communication_evaluator.py  test_model_chaos.py  test_partial_completion_evaluator.py  test_plugin.py  test_recovery_strategy_evaluator.py  test_scenario.py
tests/strands_evals/cli/: conftest.py  test_agent_task.py  test_diagnose.py  test_entrypoint.py  test_fetch.py  test_generate.py  test_report.py  test_run.py  test_validate.py  (+1 more)
tests/types/: test_evaluation_report_dataframe.py
tests_integ/: conftest.py  test_cloudwatch_provider.py  test_environment_state_evaluator.py  test_langchain_openinference_eval.py  test_langchain_traceloop_eval.py  test_langfuse_provider.py  test_multimodal_output_evaluator.py  test_output_evaluator.py
(+237 files in other folders)
