[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strands-evaluation"
version = "0.1.0"
description = "Evaluation framework for Strands"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Strands Team"}
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0,<1.0.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "rouge-score>=0.1.2"
]
dev = [
    "black>=23.0",
    "mypy>=1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py39"]